Prevent horizontal text cutoff

--- a/src/css/Project.module.css
+++ b/src/css/Project.module.css
@@ -7,12 +7,12 @@
   width: 100vw;
   height: fit-content;
   overflow: hidden;
-  border: rgb(255, 255, 255) solid 2px;
+  border: rgb(255, 255, 255) solid 1px;
 }
 
 .projectHeader{
   color: white;
-  font-size: 9.5vmin;
+  font-size: 4vw;
   margin-bottom: 4vh;
 }
 .projButton{
